# uniqstack

./: .gitignore  CMakeLists.txt  README.md
data/systemd/: CMakeLists.txt  copycat.service  uniqstack.service
src/: CMakeLists.txt  main.cpp  shellapplication.cpp  shellapplication.h
